--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,8 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:2.4.0-alpha10"
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0-alpha03"
+    implementation("androidx.navigation:navigation-compose:2.4.0-alpha10")
+
 
     // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1'
@@ -91,4 +93,6 @@ dependencies {
     // Room
     implementation "androidx.room:room-runtime:2.3.0"
     kapt "androidx.room:room-compiler:2.3.0"
+    implementation 'androidx.room:room-ktx:2.3.0'
+//    kapt "androidx.room:room-compiler:2.3.0"
 }
